--- a/src/AutoMapper.Collection.EntityFramework/AutoMapper.Collection.EntityFramework.csproj
+++ b/src/AutoMapper.Collection.EntityFramework/AutoMapper.Collection.EntityFramework.csproj
@@ -24,7 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AutoMapper.Collection\AutoMapper.Collection.csproj" />
+    <ProjectReference Include="..\Mapper.Collection\Mapper.Collection.csproj" />
   </ItemGroup>
 
   <ItemGroup>
