--- a/src/AutoMapper.Collection.Tests/AutoMapper.Collection.Tests.csproj
+++ b/src/AutoMapper.Collection.Tests/AutoMapper.Collection.Tests.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\AutoMapper.Collection\AutoMapper.Collection.csproj" />
+    <ProjectReference Include="..\Mapper.Collection\Mapper.Collection.csproj" />
   </ItemGroup>
 
   <ItemGroup>
